trunk/Andromeda/test/test-src/com/sc2mod/andromeda/test/junit/unittests/types/forbiddenExtensionCast2.a
extension X uses int{

}


static{
	X x = (!! X) 3;
	int a = (int) x; //works
	int b = x; //error
}
